Added CourseGroup entity and class, as the central part of the ERD Renamed lesson to class because this name more correctly describes the concept Renamed class group to group for simplicity Made all entities singular Changed application.yml so now Spring creates the entities in the database instead of them being created manually